# mcp-manager

./: .gitignore  CLAUDE.md  README.md  backends.json  catalog.json  generate.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.taskmaster/: config.json
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
docs/agents/specs/: 26-03-2026-tool-search-mcp-proxy.md
scripts/: test_call_tool.py
src/backends/: connection_manager.py
src/catalog/: builder.py  schema.py  vector_store.py
src/proxy/: server.py
src/tools/: call_tool.py  get_tool_schema.py  get_tools_by_server.py  list_servers.py  search_tools.py
tests/fixtures/: mock_servers.py
tests/integration/: test_error_handling.py  test_proxy_e2e.py
tests/unit/: test_call_tool.py  test_catalog_schema.py  test_connection_manager.py  test_get_tools_by_server.py  test_search_tools.py
