[tool.poetry]
name = "mcp-manager"
version = "0.1.0"
description = "MCP manager server with searchable tool catalog"
authors = ["Ronnasayd Machado"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastmcp = "^2.0"
rapidfuzz = "^3.0"
pydantic = "^2.0"
httpx = ">=0.28.1"
anyio = "^4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
mcp-manager = "src.proxy.server:main"
catalog-builder = "src.catalog.builder:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
